--- a/oauth2/authserver/src/main/resources/application.properties
+++ b/oauth2/authserver/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port: 9999
 server.contextPath: /uaa
-security.user.password: password
+security.user.password: 123
 logging.level.org.springframework.security: DEBUG
